--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </header>
-    <main class="pt-5">
+    <main class="py-5">
       <div class="container mt-5">
         <div class="row pt-4 px-4">
           <!-- about -->
